refactor(signup): login and signup  routes has been refactored, but it needs some changes and test
