# internal/handlers/user.go
@@ -43,3 +43,37 @@ func (h *UserHandler) Signup(c *fiber.Ctx) error {
 		"token":   token,
 	})
 }
+
+// Login godoc
+// @Summary User Login
+// @Description Authenticate a user by providing email or national ID and password to receive a JWT token.
+// @Tags User
+// @Accept json
+// @Produce json
+// @Param login body models.LoginRequest true "Login Request"
+// @Success 200 {object} models.User "Successfully logged in"
+// @Failure 400 {object} models.ErrorResponse "Invalid request payload"
+// @Failure 401 {object} models.ErrorResponse "Incorrect credentials"
+// @Router /api/user/login [post]
+func (h *UserHandler) Login(c *fiber.Ctx) error {
+	var loginRequest map[string]string
+	if err := c.BodyParser(&loginRequest); err != nil {
+		return fiber.NewError(fiber.StatusBadRequest, err.Error())
+	}
+
+	emailOrNationalID, password := loginRequest["email_or_national_id"], loginRequest["password"]
+	if emailOrNationalID == "" || password == "" {
+		return fiber.NewError(fiber.StatusBadRequest, "Email or National ID and password are required")
+	}
+
+	// Call the service layer to perform login
+	token, loginErr := h.UserService.Login(emailOrNationalID, password)
+	if loginErr != nil {
+		return fiber.NewError(fiber.StatusUnauthorized, loginErr.Error())
+	}
+
+	return c.Status(http.StatusOK).JSON(fiber.Map{
+		"message": "User logged in successfully",
+		"token":   token,
+	})
+}
